samples/_failures_safe/1761640596_5de5ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c45e8534.c: In function ‘main’:
./samples/SAFE/__tmp_c45e8534.c:149:9: error: expected expression at end of input
  149 |         choice = read_int("Choose operation (1-5): ", 1,
      |         ^~~~~~
./samples/SAFE/__tmp_c45e8534.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c45e8534.c:149:9: error: expected declaration or statement at end of input
